--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <body>
 
 <div class="container">
-    <h1>محرر Epub 📚 Akami</h1>
+    <h1>محرر كتب إلكترونية 📚 Akami epub</h1>
     <p class="info" style="text-align: center; font-size: 1rem; color: var(--primary);">أداة ذكية لتعديل بيانات، غلاف، وخطوط أي كتاب EPUB.</p>
 
     <div class="section">
