--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 <div class="container">
     <h1>📚محرر epub</h1>
-    <p class="info" style="text-align: center; font-size: 1rem; color: var(--primary);">أداة ذكية لتعديل بيانات، غلاف، وخطوط أي كتاب EPUB.</p>
+    <p class="info" style="text-align: center; font-size: 1rem; color: var(--primary);">أداة لتعديل بيانات، غلاف، وخطوط أي كتاب EPUB.</p>
 
     <div class="section">
         <label for="epubFile">1. اختر ملف الكتاب (EPUB) للتحرير</label>
