--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </head>
 <body>
     <a href="TXTCLEANER.html" 
-       style="position: fixed; top: 10px; right: 10px;
+       style=" top: 10px; right: 10px;
               background: #8BC34A; padding: 6px 10px; 
               font-size: 14px;
               color: #fff; border-radius: 8px; text-decoration: none;">
