--- a/index.html
+++ b/index.html
@@ -468,12 +468,14 @@
     }
 </script>
 
-<a href="TXTCLEANER.html" 
-       style=" top: 10px; right: 10px;
-              background: #8BC34A; padding: 6px 10px; 
-              font-size: 14px;
-              color: #fff; border-radius: 8px; text-decoration: none;">
+<!-- آخر الصفحة -->
+<div style="width: 100%; text-align: center; padding: 20px 0;">
+    <a href="txt/index.html" 
+       style="background: #8BC34A; padding: 12px 25px; 
+              color: #fff; border-radius: 8px; 
+              text-decoration: none; font-size: 16px;">
         الانتقال إلى أداة TXT Cleaner
     </a>
+</div>
 </body>
 </html>
