--- a/index.html
+++ b/index.html
@@ -467,13 +467,15 @@
         }
     }
 </script>
-
-<!-- آخر الصفحة -->
-<div style="width: 100%; text-align: center; padding: 10px 0;">
-    <a href="TXTCLEANER.html" 
-       style="background: #8BC34A; padding: 12px 25px; 
-              color: #fff; border-radius: 8px; 
-              text-decoration: none; font-size: 16px;">
+<div style="width: 100%; text-align: center; margin-top: 40px;">
+    <a href="txt/index.html" 
+       style="display: inline-block;
+              background: #8BC34A; 
+              padding: 12px 25px; 
+              color: #fff; 
+              border-radius: 8px; 
+              text-decoration: none; 
+              font-size: 16px;">
         الانتقال إلى أداة TXT Cleaner
     </a>
 </div>
