--- a/index.html
+++ b/index.html
@@ -467,7 +467,8 @@
         }
     }
 </script>
-<div style="width: 100%; text-align: center; margin-top: 40px;">
+<!-- نهاية الصفحة -->
+<div style="width: 100%; text-align: center; margin-top: 40px; direction: ltr;">
     <a href="txt/index.html" 
        style="display: inline-block;
               background: #8BC34A; 
