--- a/TXTCLEANER.html
+++ b/TXTCLEANER.html
@@ -250,7 +250,7 @@
 <div class="Epub-Editor"> 
     <button 
         onclick="window.location.href='index.html'" 
-        class="txt-cleaner-button">
+        class="Epub-Editor-button">
         العودة إلى Epub Editor
     </button>
 </div>
