--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
 <option value="ScheherazadeNew-Bold" data-type="local">خط  شهرزاد نيو غامق (ScheherazadeNew-Bold)</option>
 <option value="ScheherazadeNew-Medium" data-type="local">خط شهرزاد متوسط (ScheherazadeNew-Medium)</option>
 <option value="ScheherazadeNew-SemiBold" data-type="local">خط شهرزاد سيمي بولد (ScheherazadeNew-SemiBold)</option>
+<option value="Sakkal_majalla" data-type="local">خط ساكال مجلة (Sakkal_majalla)</option>
+<option value="Almarai-Light" data-type="local">خط المراعي خفيف (Almarai-Light)</option>
+<option value="Almarai-Bold" data-type="local">خط المراعي غامق (Almarai-Bold)</option>
             <option value="Cairo" data-type="google">خط القاهرة (Cairo)</option>
             <option value="Tajawal" data-type="google">خط تجوال (Tajawal)</option>
             <option value="Noto Naskh Arabic" data-type="google">خط نسخ جوجل (Noto Naskh Arabic)</option>
@@ -242,6 +245,21 @@
 'ScheherazadeNew-SemiBold': {
             fileName: 'ScheherazadeNew-SemiBold.ttf', 
             localPath: 'ScheherazadeNew-SemiBold.ttf', // 
+            mime: 'font/ttf'
+        },
+'Sakkal_majalla': {
+            fileName: 'Sakkal_majalla.ttf', 
+            localPath: 'Sakkal_majalla.ttf', // مسار الخط المحلي في نظام الملفات الخارجي
+            mime: 'font/ttf'
+        },
+'Almarai-Light': {
+            fileName: 'Almarai-Light.ttf', 
+            localPath: 'Almarai-Light.ttf', // مسار الخط المحلي في نظام الملفات الخارجي
+            mime: 'font/ttf'
+        },
+'Almarai-Bold': {
+            fileName: 'Almarai-Bold.ttf', 
+            localPath: 'Almarai-Bold.ttf', // مسار الخط المحلي في نظام الملفات الخارجي
             mime: 'font/ttf'
         }
     };
