--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>محرر Metadata Epub 📚 </title>
+    <title>محرر Epub Metadata  📚 </title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 
@@ -140,7 +140,7 @@
 <body>
 
 <div class="container">
-    <h1>محرر Metadata Epub 📚</h1>
+    <h1>محرر Epub Metadata  📚</h1>
     <p class="info" style="text-align: center; font-size: 1rem; color: var(--primary);">أداة لتعديل بيانات، غلاف، وخطوط أي كتاب EPUB.</p>
 
     <div class="section">
